--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hello world</h1>
 
-    <form action="/" method="POST">
+    <form action="/api/" method="POST">
         Your name: <input type="text" name="name"/><br>
 
         <input type="submit" />
